grupiranje klasa, logo, loptica

--- a/style.css
+++ b/style.css
@@ -3,63 +3,77 @@
   box-sizing: border-box;
 }
 
-label {
-  height: 20px;
+.title1 {
+  margin-bottom: 40px;
+  padding-bottom: 25px;
 }
 
-.logo {
+h1 {
+  left: 180px;
+
   position: absolute;
-  width: 50px;
+  color: #c9f364;
+  text-align: center;
+  margin-top: 1px;
+}
+
+/* LOGO */
+
+.title1 > .logo {
+  position: absolute;
+  width: 40px;
   height: 40px;
-  margin-top: 20px;
+  margin-top: 1px;
   margin-left: 40px;
 
-  background-color: red;
+  background: linear-gradient(90deg, #459428 50%, rgba(9, 9, 121, 1) 50%);
   z-index: 100;
+}
+
+.first,
+.lijevo,
+.sredina,
+.desno {
+  position: absolute;
+  background-color: white;
 }
 
 .first {
-  position: absolute;
-  width: 30px;
-  height: 10px;
+  width: 20px;
+  height: 8px;
   border-radius: 2px;
-  margin-top: 8px;
+  margin-top: 12.5px;
   margin-left: 10px;
   z-index: 100;
-  background-color: white;
 }
+
 .lijevo {
-  position: absolute;
-  width: 10px;
-  height: 20px;
-  border-radius: 5px;
-  margin-top: 15px;
+  width: 5px;
+  height: 12px;
+  border-radius: 2px;
+  margin-top: 16px;
   margin-left: 4px;
-  z-index: 100;
-  background-color: white;
-  transform: rotate(-30deg);
+  z-index: 80;
+
+  transform: rotate(-20deg);
 }
 .sredina {
-  position: absolute;
-  width: 32px;
-  height: 10px;
+  width: 28px;
+  height: 4px;
   border-radius: 5px;
-  margin-top: 28px;
-  margin-left: 9px;
+  margin-top: 24px;
+  margin-left: 6px;
   z-index: 100;
-  background-color: white;
 }
 
 .desno {
-  position: absolute;
-  width: 10px;
-  height: 20px;
-  border-radius: 5px;
-  margin-top: 15px;
-  margin-left: 35px;
-  z-index: 100;
-  background-color: white;
-  transform: rotate(30deg);
+  width: 5px;
+  height: 12px;
+  border-radius: 2px;
+  margin-top: 16px;
+  margin-left: 31px;
+  z-index: 80;
+  transform: rotate(20deg);
 }
 
 .container {
@@ -71,20 +85,11 @@ label {
   width: 50%;
   border: 10px;
   box-shadow: 10px 10px #c9f364;
-  /* box-shadow: 10px 10px #45a049; */
 }
 
 input[type="submit"]:hover {
   background-color: #c9f364;
-  /* background-color: rgb(83, 175, 72); */
   color: #0057a3;
-}
-
-h1 {
-  color: #c9f364;
-  /* color: rgb(83, 175, 72); */
-  text-align: center;
-  margin-top: 1px;
 }
 
 .input-container {
@@ -133,13 +138,11 @@ input [type="submit"] {
 }
 input [type="submit"]:hover {
   background-color: #c9f364;
-  /* background-color: #45a049; */
 }
 
 input:hover {
   opacity: 1;
   color: #c9f364;
-  /* color: rgb(83, 175, 72); */
 }
 html,
 body {
@@ -173,11 +176,6 @@ body {
   font-size: 30px;
 }
 
-/* body {
-  margin: 0;
-  padding: 0;
-  background: #262626;
-} */
 .container-ball {
   position: absolute;
   top: 70%;
@@ -199,6 +197,9 @@ body {
     -transform: rotate(0deg) scale(2) skew(0deg) translate(100px);
   }
 } */
+
+/* TENNIS BALL */
+
 .balle {
   position: absolute;
   width: 60px;
@@ -207,20 +208,10 @@ body {
   border-radius: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
-  animation: balle 1.5s linear infinite;
+  animation: balle 2.5s linear infinite;
 }
-.balle:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border: 5px solid #fff;
-  border-radius: 50%;
-  box-sizing: border-box;
-  background: transparent;
-  left: -65%;
-  filter: blur(1px);
-}
+
+.balle:before,
 .balle:after {
   content: "";
   position: absolute;
@@ -230,9 +221,16 @@ body {
   border-radius: 50%;
   box-sizing: border-box;
   background: transparent;
-  right: -65%;
   filter: blur(1px);
 }
+
+.balle:before {
+  left: -65%;
+}
+.balle:after {
+  right: -65%;
+}
+
 @keyframes balle {
   0% {
     transform: translate(-50%, -50%) translateY(-200px) rotate(0deg);
@@ -246,15 +244,15 @@ body {
 }
 .ombre {
   position: absolute;
-  width: 150px;
-  height: 50px;
+  width: 120px;
+  height: 45px;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 50%;
   transform: translate(-50%, 100%);
   overflow: hidden;
   filter: blur(2px);
   z-index: -1;
-  animation: ombre 1.5s linear infinite;
+  animation: ombre 2.5s linear infinite;
 }
 @keyframes ombre {
   0% {
